--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,14 +20,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EntertainmentActivity"
-            android:label="@string/entertainment_activity"/>
-        <activity android:name=".ScienceActivity"
-            android:label="@string/science_activity"/>
-        <activity android:name=".SportsActivity"
-            android:label="@string/sports_activity"/>
-        <activity android:name=".TechnologyAvtivity"
-            android:label="@string/technology_activity"/>
+        <activity
+            android:name=".EntertainmentActivity"
+            android:label="@string/entertainment_activity" />
+        <activity
+            android:name=".ScienceActivity"
+            android:label="@string/science_activity" />
+        <activity
+            android:name=".SportsActivity"
+            android:label="@string/sports_activity" />
+        <activity
+            android:name=".TechnologyAvtivity"
+            android:label="@string/technology_activity" />
+        <activity android:name=".DetailedActivity"></activity>
     </application>
 
 </manifest>
